--- a/requirements.txt
+++ b/requirements.txt
@@ -1,357 +1,73 @@
-absl-py==1.3.0
-aiohttp==3.8.3
-aiosignal==1.3.1
-altair==4.2.0
-altgraph==0.17.3
-analytics-python==1.4.0
-anyio==3.6.2
-argon2-cffi==21.3.0
-argon2-cffi-bindings==21.2.0
-arrow==1.2.3
-asttokens==2.2.1
-astunparse==1.6.3
-async-generator==1.10
-async-timeout==4.0.2
-attrs==22.1.0
-autosar==0.4.1
-backcall==0.2.0
+altair==4.2.2
+analytics-python==1.4.post1
+attrs==23.1.0
 backoff==1.10.0
 bcrypt==4.0.1
-beautifulsoup4==4.11.1
-bleach==6.0.0
-blinker==1.5
-bottle==0.12.23
-bottle-websocket==0.2.9
-buildozer==1.5.0
-CacheControl==0.12.11
-cachetools==5.2.0
-cachy==0.3.0
-certifi==2022.9.24
+blinker==1.6.2
+cachetools==5.3.1
+certifi==2023.5.7
 cffi==1.15.1
-cfile==0.2.0
-charset-normalizer==2.1.1
-cleo==1.0.0a5
+charset-normalizer==3.1.0
 click==8.1.3
-colorama==0.4.5
-comm==0.1.2
-commonmark==0.9.1
-comtypes==1.1.14
-contourpy==1.0.5
-coqui==0.0.10
-crashtest==0.3.1
-cryptography==38.0.3
-cvlib==0.2.7
-cvzone==1.5.6
+colorama==0.4.6
+contourpy==1.0.7
+cryptography==41.0.1
 cycler==0.11.0
-Cython==0.29.32
-dataclasses-json==0.5.7
-DateTime==4.7
-debugpy==1.6.6
 decorator==5.1.1
-defusedxml==0.7.1
-dill==0.3.6
-distlib==0.3.6
-docopt==0.6.2
-docutils==0.20
-drillpy==0.2.0
-dulwich==0.20.50
-easyocr==1.6.2
-Eel==0.12.4
 entrypoints==0.4
-et-xmlfile==1.1.0
-exceptiongroup==1.0.4
-executing==1.2.0
-fastapi==0.87.0
-fastjsonschema==2.16.2
-ffmpeg-python==0.2.0
 ffmpy==0.3.0
-filelock==3.8.0
-Flask==2.2.2
-flatbuffers==22.9.24
-fonttools==4.37.4
-fqdn==1.5.1
-frozenlist==1.3.3
-fsspec==2022.11.0
-future==0.18.2
-gast==0.4.0
-gevent==22.10.1
-gevent-websocket==0.10.1
-gitdb==4.0.9
-GitPython==3.1.29
-google-auth==2.13.0
-google-auth-oauthlib==0.4.6
-google-pasta==0.2.0
-google-trans==2.4.0
-gql==3.3.0
-gradio==3.15.0
-graphql-core==3.2.3
-greenlet==1.1.3.post0
-grpcio==1.50.0
-gTTS==2.2.4
-h11==0.14.0
-h5py==3.7.0
-html5lib==1.1
-httpcore==0.16.3
-httpx==0.23.1
-huggingface-hub==0.10.1
+fonttools==4.39.4
+gitdb==4.0.10
+GitPython==3.1.31
 idna==3.4
-imageio==2.22.2
-importlib-metadata==5.0.0
-imutils==0.5.4
-ipykernel==6.21.2
-ipython==8.10.0
-ipython-genutils==0.2.0
-ipywidgets==8.0.4
-isoduration==20.11.0
-itsdangerous==2.1.2
-jaraco.classes==3.2.3
-jedi==0.18.2
+importlib-metadata==6.6.0
 Jinja2==3.1.2
-joblib==1.2.0
-json5==0.9.8
-jsonpointer==2.3
-jsonschema==4.16.0
-jupyter==1.0.0
-jupyter-console==6.6.0
-jupyter-events==0.6.3
-jupyter_client==8.0.3
-jupyter_core==5.2.0
-jupyter_server==2.3.0
-jupyter_server_terminals==0.4.4
-jupyterlab-pygments==0.2.2
-jupyterlab-widgets==3.0.5
-keras==2.10.0
-Keras-Preprocessing==1.1.2
-keyring==23.11.0
-Kivy==2.1.0
-kivy-deps.angle==0.3.3
-kivy-deps.glew==0.3.1
-kivy-deps.sdl2==0.4.5
-Kivy-Garden==0.1.5
+jsonschema==4.17.3
 kiwisolver==1.4.4
-langchain==0.0.157
-libclang==14.0.6
-linkify-it-py==1.0.3
-littleutils==0.2.2
-lockfile==0.12.2
-loguru==0.6.0
-lxml==4.9.1
-Markdown==3.4.1
-markdown-it-py==2.1.0
-markdown2==2.4.6
-MarkupSafe==2.1.1
-marshmallow==3.19.0
-marshmallow-enum==1.5.1
-matplotlib==3.6.0
-matplotlib-inline==0.1.6
-mdit-py-plugins==0.3.3
+markdown-it-py==2.2.0
+markdown2==2.4.8
+MarkupSafe==2.1.2
+matplotlib==3.7.1
 mdurl==0.1.2
-MechanicalSoup==1.1.0
-mediapipe==0.8.11
-mistune==2.0.5
 monotonic==1.6
-more-itertools==9.0.0
-mpmath==1.2.1
-msgpack==1.0.4
-multidict==6.0.4
-multiprocess==0.70.14
-mypy-extensions==1.0.0
-nbclassic==0.5.2
-nbclient==0.7.2
-nbconvert==7.2.9
-nbformat==5.7.3
-neattext==0.1.3
-nest-asyncio==1.5.6
-networkx==2.8.7
-ninja==1.10.2.4
-notebook==6.5.2
-notebook_shim==0.2.2
-numexpr==2.8.4
-numpy==1.23.4
-oauthlib==3.2.2
-openai==0.27.6
-openai-whisper @ git+https://github.com/openai/whisper.git@7858aa9c08d98f75575035ecd6481f462d66ca27
-openapi-schema-pydantic==1.2.4
-opencv-contrib-python==4.7.0.68
-opencv-python==4.7.0.72
-opencv-python-headless==4.5.4.60
-openlab @ file:///C:/Users/eyram/Downloads/Compressed/Python/python
-openpyxl==3.0.10
-opt-einsum==3.3.0
-orjson==3.8.3
-outcome==1.2.0
-outdated==0.2.2
-packaging==21.3
-pandas==1.5.1
-pandocfilters==1.5.0
-paramiko==2.12.0
-parso==0.8.3
-patsy==0.5.3
-pefile==2022.5.30
-pexpect==4.8.0
-pickleshare==0.7.5
-Pillow==9.2.0
-pip-reqs==0.10.0
-pipenv==2022.11.11
-pipreqs==0.4.11
-pkginfo==1.8.3
-platformdirs==2.5.4
-plotly==5.11.0
-pocketsphinx==5.0.0
-poetry==1.2.2
-poetry-core==1.3.2
-poetry-plugin-export==1.2.0
-progressbar==2.5
-prometheus-client==0.16.0
-prompt-toolkit==3.0.36
-protobuf==3.19.6
-psutil==5.9.3
-ptyprocess==0.7.0
-pure-eval==0.2.2
-pyarrow==9.0.0
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-PyAudio==0.2.12
-pyclipper==1.3.0.post3
+numpy==1.24.3
+packaging==23.1
+pandas==2.0.2
+paramiko==3.2.0
+Pillow==9.5.0
+plotly==5.14.1
+protobuf==3.20.3
+pyarrow==12.0.0
 pycparser==2.21
-pycryptodome==3.16.0
-pydantic==1.10.2
-pydeck==0.8.0b4
+pycryptodome==3.18.0
+pydeck==0.8.1b0
 pydub==0.25.1
-pyFirmata==1.1.0
-Pygments==2.13.0
-pyinstaller==5.6
-pyinstaller-hooks-contrib==2022.10
-PyKaldi==0.0.1
-pylev==1.4.0
+Pygments==2.15.1
 Pympler==1.0.1
 PyNaCl==1.5.0
 pyparsing==3.0.9
-pypiwin32==223
-PyQt5==5.15.7
-PyQt5-Qt5==5.15.2
-PyQt5-sip==12.11.0
-PyQtWebEngine==5.15.6
-PyQtWebEngine-Qt5==5.15.2
-pyreadline3==3.4.1
-pyrsistent==0.18.1
-pyserial==3.5
-PySocks==1.7.1
-python-bidi==0.4.2
+pyrsistent==0.19.3
 python-dateutil==2.8.2
-python-json-logger==2.0.6
-python-multipart==0.0.5
-pyttsx3==2.90
-pytz==2022.5
-pytz-deprecation-shim==0.1.0.post0
-PyWavelets==1.4.1
-pywin32==304
-pywin32-ctypes==0.2.0
-pywinpty==2.0.10
-PyYAML==6.0
-pyzmq==25.0.0
-qtconsole==5.4.0
-QtPy==2.3.0
-regex==2022.9.13
-requests==2.28.1
-requests-oauthlib==1.3.1
-requests-toolbelt==0.9.1
-rfc3339-validator==0.1.4
-rfc3986==1.5.0
-rfc3986-validator==0.1.1
-rich==12.6.0
-rsa==4.9
-scikit-image==0.19.3
-scikit-learn==1.1.2
-scipy==1.9.3
-seaborn==0.12.1
-sealion==4.4.5
-selenium==4.6.0
-semantic-version==2.10.0
-semver==2.13.0
-Send2Trash==1.8.0
-sentry-sdk==1.15.0
-setuptools-rust==1.5.2
-sh==2.0.3
-Shapely==1.8.5.post1
-shellingham==1.5.0
+pytz==2023.3
+requests==2.31.0
+rich==13.4.1
+scipy==1.10.1
 six==1.16.0
-sklearn==0.0
-sklearn3==0.0.1
 smmap==5.0.0
-sniffio==1.3.0
-sortedcontainers==2.4.0
-sounddevice==0.4.6
-soupsieve==2.3.2.post1
-sox==1.4.1
-SpeechRecognition==3.8.1
-SQLAlchemy==2.0.12
-stack-data==0.6.2
-starlette==0.21.0
-statsmodels==0.13.5
-streamlit==1.15.1
+streamlit==1.22.0
 streamlit-ace==0.1.1
 streamlit-card==0.0.4
 streamlit-gradio==2.8.2
 streamlit-option-menu==0.3.2
 streamlit-toggle-switch==1.0.2
-sweet==0.1.12
-sweet.socket==0.0.0.1
-tenacity==8.1.0
-tensorboard==2.10.1
-tensorboard-data-server==0.6.1
-tensorboard-plugin-wit==1.8.1
-tensorflow==2.10.0
-tensorflow-estimator==2.10.0
-tensorflow-io-gcs-filesystem==0.27.0
-termcolor==2.0.1
-terminado==0.17.1
-thop==0.1.1.post2209072238
-threadpoolctl==3.1.0
-tifffile==2022.10.10
-tinycss2==1.2.1
-tokenizers==0.13.1
+tenacity==8.2.2
 toml==0.10.2
-tomlkit==0.11.6
 toolz==0.12.0
-torch==1.12.1
-torchvision==0.13.1
-tornado==6.2
-tqdm==4.64.1
-traitlets==5.9.0
-transformers==4.23.1
-trio==0.22.0
-trio-websocket==0.9.2
-typing-inspect==0.8.0
-typing_extensions==4.4.0
-tzdata==2022.5
-tzlocal==4.2
-uc-micro-py==1.0.1
-ultralytics==8.0.44
-uri-template==1.2.0
-urllib3==1.26.12
-uuid==1.30
-uvicorn==0.20.0
+tornado==6.3.2
+typing_extensions==4.6.2
+tzdata==2023.3
+tzlocal==5.0.1
+urllib3==2.0.2
 validators==0.20.0
-virtualenv==20.16.7
-virtualenv-clone==0.5.7
-watchdog==2.1.9
-wcwidth==0.2.6
-webcolors==1.12
-webencodings==0.5.1
-websocket-client==1.5.1
-websockets==10.4
-Werkzeug==2.2.2
-whichcraft==0.6.1
-whisper==1.1.10
-widgetsnbextension==4.0.5
-win32-setctime==1.1.0
-wrapt==1.14.1
-wsproto==1.2.0
-xgboost==1.7.5
-yarg==0.1.9
-yarl==1.8.2
-youtube-dl==2021.12.17
-zipp==3.9.0
-zope.event==4.5.0
-zope.interface==5.5.0
+watchdog==3.0.0
+zipp==3.15.0
